test_output_demoqa.txt

Running 3 tests using 1 worker

[1A[2K[1/3] [chromium] › tests\api\demoqa_api.spec.js:19:5 › DemoQA Account API Tests › 1. Create User
[1A[2K[chromium] › tests\api\demoqa_api.spec.js:19:5 › DemoQA Account API Tests › 1. Create User
Create User Failed: <!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<title>Error</title>
</head>
<body>
<pre>Cannot POST //Account/v1/User</pre>
</body>
</html>


[1A[2K  1) [chromium] › tests\api\demoqa_api.spec.js:19:5 › DemoQA Account API Tests › 1. Create User ────

    Error: [2mexpect([22m[31mreceived[39m[2m).[22mtoBe[2m([22m[32mexpected[39m[2m) // Object.is equality[22m

    Expected: [32m201[39m
    Received: [31m404[39m

      30 |         }
      31 |
    > 32 |         expect(response.status()).toBe(201);
         |                                   ^
      33 |         const body = await response.json();
      34 |         console.log('Created User:', body);
      35 |
        at C:\Users\ayush mishra\Desktop\Finacplus Automation Framework\Finacplus-Automation-Framework\tests\api\demoqa_api.spec.js:32:35


[1A[2K[2/3] [chromium] › tests\api\demoqa_api.spec.js:42:5 › DemoQA Account API Tests › 2. Generate Token
[1A[2K[chromium] › tests\api\demoqa_api.spec.js:42:5 › DemoQA Account API Tests › 2. Generate Token
Generate Token Failed: <!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<title>Error</title>
</head>
<body>
<pre>Cannot POST //Account/v1/GenerateToken</pre>
</body>
</html>


[1A[2K  2) [chromium] › tests\api\demoqa_api.spec.js:42:5 › DemoQA Account API Tests › 2. Generate Token ─

    Error: [2mexpect([22m[31mreceived[39m[2m).[22mtoBe[2m([22m[32mexpected[39m[2m) // Object.is equality[22m

    Expected: [32m200[39m
    Received: [31m404[39m

      52 |         }
      53 |
    > 54 |         expect(response.status()).toBe(200);
         |                                   ^
      55 |         const body = await response.json();
      56 |         console.log('Token Response:', body);
      57 |
        at C:\Users\ayush mishra\Desktop\Finacplus Automation Framework\Finacplus-Automation-Framework\tests\api\demoqa_api.spec.js:54:35


[1A[2K[3/3] [chromium] › tests\api\demoqa_api.spec.js:64:5 › DemoQA Account API Tests › 3. Fetch User Details
[1A[2K  3) [chromium] › tests\api\demoqa_api.spec.js:64:5 › DemoQA Account API Tests › 3. Fetch User Details 

    SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON

      74 |
      75 |         expect(response.status()).toBe(200);
    > 76 |         const body = await response.json();
         |                      ^
      77 |         console.log('Fetched User Details:', body);
      78 |
      79 |         expect(body.userId).toBe(userId);
        at C:\Users\ayush mishra\Desktop\Finacplus Automation Framework\Finacplus-Automation-Framework\tests\api\demoqa_api.spec.js:76:22


[1A[2K  3 failed
    [chromium] › tests\api\demoqa_api.spec.js:19:5 › DemoQA Account API Tests › 1. Create User ─────
    [chromium] › tests\api\demoqa_api.spec.js:42:5 › DemoQA Account API Tests › 2. Generate Token ──
    [chromium] › tests\api\demoqa_api.spec.js:64:5 › DemoQA Account API Tests › 3. Fetch User Details 
